[Fix] => scss to css, styles overlaping

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  max-width: 1240px;
 }
 
 .hero__punchline,
